[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Estaciones/Rele/spaceStation_029.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estaciones/Rele/spaceStation_028.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estaciones/Rele/laserBlue09.png" type="Texture" id=3]
[ext_resource path="res://Juego/Estaciones/Rele/doorOpen_000.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Estaciones/Rele/lowFrequency_explosion_000.ogg" type="AudioStream" id=5]
[ext_resource path="res://Juego/Estaciones/Rele/lowFrequency_explosion_001.ogg" type="AudioStream" id=6]
[ext_resource path="res://Juego/Estaciones/Rele/laserBlue08.png" type="Texture" id=7]
[ext_resource path="res://Juego/Estaciones/Rele/ReleDeMasa.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Superactivada"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.423529, 0.266667, 0.627451, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.423529, 0.266667, 0.627451, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Sprite3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.423529, 0.266667, 0.627451, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.423529, 0.266667, 0.627451, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.423529, 0.266667, 0.627451, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.423529, 0.266667, 0.627451, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 720.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SuperActivadoSFX:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "activada"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.745098, 0.564706, 0.988235, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.745098, 0.564706, 0.988235, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Sprite3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.745098, 0.564706, 0.988235, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.745098, 0.564706, 0.988235, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.745098, 0.564706, 0.988235, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ), Color( 0.745098, 0.564706, 0.988235, 1 ), Color( 0.564706, 0.717647, 0.988235, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ActivadoSFX:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "defalul"

[sub_resource type="Animation" id=4]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 2.37841, 0.450625, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 2.63902, 0.435275, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite4:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite4:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite5:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite5:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 270.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite4:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite5:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SpawnSFX:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 360.953

[node name="ReleDeMasa" type="Node2D" groups=[
"Minimapa",
]]
script = ExtResource( 8 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite2" type="Sprite" parent="Sprites"]
modulate = Color( 0.564706, 0.717647, 0.988235, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
modulate = Color( 0.564706, 0.717647, 0.988235, 1 )
position = Vector2( 0.0947266, -86.195 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Sprites"]
modulate = Color( 0.564706, 0.717647, 0.988235, 1 )
position = Vector2( -0.178406, 88.5895 )
rotation = 3.14159
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
visible = false
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Sprite5" type="Sprite" parent="."]
visible = false
rotation = 4.71239
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/Superactivada = SubResource( 1 )
anims/activada = SubResource( 2 )
anims/defalul = SubResource( 3 )
anims/spawn = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="ActivadoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -3.549
bus = "SFX"

[node name="SuperActivadoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.243
bus = "SFX"

[node name="SpawnSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -7.866
pitch_scale = 0.73
bus = "SFX"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
